--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  input {
+    @apply w-[400px] px-4 py-3 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-300 bg-white text-gray-700 placeholder-gray-400;
+  }
+
+  button {
+    @apply w-fit font-medium text-white px-4 py-2 rounded-lg shadow-sm bg-blue-400;
+  }
+}
